# gastos-pessoais

./: README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
database/: schema.sql
src/: cotacao.py  database.py  main.py  manager.py
tests/: test_cotacao.py  test_database.py  test_manager.py
