[project]
name = "gastos-pessoais"
version = "1.0.0"
description = "Gerenciador de gastos pessoais via CLI"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gastos = "src.main:main"

[tool.ruff]
line-length = 88

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"